--- a/README
+++ b/README
@@ -32,7 +32,7 @@ optional arguments:
                         submit the smaller protein as the target.
   -site X,Y,Z, --input-docking-site X,Y,Z
                         The docking site in the receptor for protein-protein
-                        docking. e.g. 68.07,46.19,48.61
+                        docking. e.g. -site=-35.73,13.75,-27.92
   -ismi <string>, --input-protac-smi <string>
                         Smiles file of PROTAC.
   -o <string>, --output-filepath <string>
@@ -72,3 +72,5 @@ python main.py -irec example_2/receptor.pdb -ilig example_2/target.pdb -site=68.
 With RosettaDock-based refinement:
 
 python main.py -irec example_2/receptor.pdb -ilig example_2/target.pdb -site=68.02,46.63,48.63 -ismi example_2/protac.smi -o docking_2 -cpu 28 -ie3lig1 example_2/rec_lig_1.sdf -ie3lig2 example_2/rec_lig_2.sdf refine
+
+Warning: The chain id of receptor and target should be different. The receptor and target must only have one chain.
