--- a/README
+++ b/README
@@ -73,3 +73,4 @@ With RosettaDock-based refinement:
 
 python main.py -irec example_2/receptor.pdb -ilig example_2/target.pdb -site=68.02,46.63,48.63 -ismi example_2/protac.smi -o docking_2 -cpu 28 -ie3lig1 example_2/rec_lig_1.sdf -ie3lig2 example_2/rec_lig_2.sdf -refine
 
+If you meet some problems, please contact wenggaoqi@zju.edu.cn
